--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -119,4 +119,6 @@
     <string name="colaboracion_con">Colaboración con</string>
     <string name="colaboradores">MVZ Esp. Edgar David González Gallegos</string>
     <string name="mensaje_about">Creada por Fernando Ramírez Cipriano y Carlos Alberto Álvarez Vázquez en colaboración con el MVZ Esp. Edgar David González Gallegos.</string>
+    <string name="open_with">Abrir con</string>
+    <string name="creacion_archivo">Creación de archivo</string>
 </resources>
