--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,4 +141,5 @@
     <string name="channel_description" translatable="false">HemaCount Channel</string>
     <string name="open_with">Open with</string>
     <string name="creacion_archivo">File creation</string>
+    <string name="file_provider_authority" translatable="false">mx.com.sousystems.fileprovider</string>
 </resources>
